--- a/layouts/partials/careers.html
+++ b/layouts/partials/careers.html
@@ -1,33 +1,37 @@
 {{ if .Site.Data.careers.enable }}
 <!-- Service Start -->
-<section id="service">
-  <div class="container">
-    <div class="row justify-content-center">
+<section id="teaser" class="diagonal-box bg-white">
+  <div class="container content">
+    <div class="row justify-content-center pt-5">
       <div class="col-md-8 text-center">
-        <div class="embed-responsive embed-responsive-16by9 mb-4">
+        <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kaq76j7vMJY?rel=0&amp;controls=0&amp;showinfo=0&amp;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
-    
+    </div>
+  </section>
+   
+  <section id="jobs" class="bg-white">
+    <div class="row justify-content-center">
+      <h2>Open vacancies</h2>
+    </div>
     <!-- Content -->
     <div class="row justify-content-center">
-      
-      
       <div class="card-deck">
           <div class="card text-center border-primary">
             <div class="card-body">
               <h5 class="card-title">Cloud Engineer</h5>
               <p class="card-text">You build cloud platforms for developers.</p>
             </div>
-            <div class="card-footer text-center"><a href="#" class="btn btn-primary" data-toggle="modal" data-target="#cloud-engineer">Read the job description</a></div>
+            <div class="card-footer text-center"><a href="#" class="btn btn-primary rounded-pill" data-toggle="modal" data-target="#cloud-engineer">Read the job description</a></div>
         </div>
           <div class="card text-center border-warning">
             <div class="card-body">
               <h5 class="card-title">Cloud Developer</h5>
               <p class="card-text">You develop business applications using the cloud.</p>
             </div>
-            <div class="card-footer text-center"><a href="#" class="btn btn-warning" data-toggle="modal" data-target="#cloud-developer">Read the job description</a></div>
+            <div class="card-footer text-center"><a href="#" class="btn btn-warning rounded-pill" data-toggle="modal" data-target="#cloud-developer">Read the job description</a></div>
         </div>
       </div>
 
@@ -46,8 +50,8 @@
               <p>{{ .text | markdownify }}</p>
             </div>
             <div class="modal-footer">
-              <a class="btn btn-success" id="book" href="">Apply now</a>
-              <a class="btn btn-outline-danger" data-dismiss="modal" aria-label="Close">Close</a>
+              <a class="btn btn-success rounded-pill" id="book" href="">Apply now</a>
+              <a class="btn btn-outline-danger rounded-pill" data-dismiss="modal" aria-label="Close">Close</a>
               <script type="text/javascript" src="https://x.ai/embed/xdotai-embed.js" id="xdotaiEmbed" data-page="/bastichelaar/interview" data-height data-width data-element="#book" async></script>
             </div>
           </div>
@@ -55,13 +59,14 @@
       </div>
       {{ end }}
     </div>
-    </div>
+
 </section>
-<section class="">
+
+<section>
       <div class="text-center">
         <h2>Did we trigger you?</h2>
         <p>Great! Writing texts is hard, especially for job offers. But now you're here, let's take the next step. Let's have a coffee (or a beer if you like).</p>
-        <a class="btn btn-outline-primary mt-lg-2" id="book" href="">Apply now</a>
+        <a class="btn btn-outline-primary rounded-pill mt-lg-2" id="book" href="">Apply now</a>
         <script type="text/javascript" src="https://x.ai/embed/xdotai-embed.js" id="xdotaiEmbed" data-page="/bastichelaar/interview" data-height data-width data-element="#book" async></script>
       </div>
 </section>
