--- a/layouts/partials/diagonal.html
+++ b/layouts/partials/diagonal.html
@@ -1,3 +1,7 @@
-<div class="s-intro relative diagonal">
-    <img src="https://binx.io/wp-content/themes/binx/images/angle-white.svg" alt="" class="deco-img-wide">
+<div class="diagonal-box">
+	<div class="content">
+        <div class="testbox">blabla</div>
+        <div class="testbox">blabla</div>
+        <div class="testbox">blabla</div>
+    </div>
 </div>
