--- a/layouts/shortcodes/section.html
+++ b/layouts/shortcodes/section.html
@@ -1,5 +1,5 @@
-<section class="mt-lg-5">
-  <div class="container text-center text-lg-left mt-5">
+<section class="bg-white post">
+  <div class="container text-center text-lg-left pt-3">
     <div class="row align-items-center">
         {{ .Inner }}
     </div>
