--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -24,15 +24,16 @@ $purple:  #2F4858;
 $pink:    #A60067;
 $red:     #F6511D;
 $orange:  #F26419;
-$yellow:  #F6AE2D;
+$yellow:  #f4b443;
 $green:   #28a745;
 $teal:    #44FFD1;
 $cyan:    #86BBD8;
 
 // Custom Color
-$color-gray-light-v1: #b5b5b5;
+
 $color-gray-light-v2: #f5f5f5;
 $color-gray-light-v3: #efeff4;
+$color-gray-light-v1: #93989f;
 $color-gray-dark-v1: #383339;
 $color-gray-dark-v3: #9797a2;
 $color-blue-dark-v1: #2d2d37;
