--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,17 +10,17 @@
 	<!-- Hero Section-->
 	<section class="hero bg-hero">
 		<div class="container text-center">
-			<h1>{{ .Page.Title }}</h1>
+			<h1 class="text-white">{{ .Page.Title }}</h1>
 			<div class="row">
 			<div class="col-lg-8 mx-auto">
-				<p class="lead text-muted">{{ .Page.Description }}</p>
+				<p class="lead text-white">{{ .Page.Description }}</p>
 			</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="blog">
-		<div class="container">
+	<section class="blog diagonal-box bg-white pt-5">
+		<div class="container content">
 			<div class="row">
 				{{ range (.Paginator 4).Pages }}
 				<div class="col-md-6 p-md-3">
@@ -31,7 +31,7 @@
 						<p>
               				{{ if .Params.summary }}{{ .Params.summary }}{{ else }}{{ .Summary }}{{ end }}
 						</p>
-						<a href="{{ .Permalink }}" class="btn btn-primary">Read More</a>
+						<a href="{{ .Permalink }}">Read More »</a>
 					</article>
 				</div>
 				{{ end }}
