--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,7 +1,7 @@
 <!-- contact form start -->
 {{ with .Site.Params.contact }}
-<section id="contact-form">
-  <div class="container">
+<section id="contact-form" class="diagonal-box bg-white">
+  <div class="container content pt-5">
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
@@ -44,7 +44,7 @@
       <div class="col-12">
           <div class="block">
             <h2>Book a meeting</h2>
-            <iframe src="https://x.ai/calendar/bastichelaar/phone" style="margin: 0; padding: 0; border: 0;width:100%;min-height:800px;" scrolling="auto" > </iframe>
+            <iframe src="https://x.ai/calendar/bastichelaar/phone" style="width:100%;height:100vh;border:none;;" scrolling="auto" > </iframe>
           </div>
         </div>
         </div>
