--- a/layouts/partials/home-clients.html
+++ b/layouts/partials/home-clients.html
@@ -1,26 +1,23 @@
-
-    <section class="bg-white">
-      <div class="container">
+    <section class="bg-white diagonal-box">
         <div class="text-center">
           <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <p class="text-muted font-weight-lighter mt-2">Companies we work with:</p>
+            <div class="col-lg-8 mx-auto content">
+              <p class="text-muted font-weight-lighter mt-4 mb-2">Companies we work with:</p>
             </div>
           </div>
         </div>
-        <div class="clients mt-4">
-          <div class="owl-carousel">
+        <div class="clients">
+          <div class="owl-carousel content">
               {{ with .Site.GetPage "section" "images" }}
               {{ $resources := .Resources.Match "clients/*" }}
               {{ range shuffle $resources }}
               {{ with . }}
                 {{ $imageName := .Name }}
                 {{ $image120:= (.Fit "150x80") }}
-                  <div class="item"><img src="{{ $image120.RelPermalink }}" alt="" class="img-fluid"></div>
+                  <div class="item mt-1"><img src="{{ $image120.RelPermalink }}" alt="" class="img-fluid"></div>
               {{ end }}
               {{ end }}
               {{ end }}
           </div>
-        </div>
       </div>
     </section>
