--- a/layouts/partials/home-portfolio.html
+++ b/layouts/partials/home-portfolio.html
@@ -1,11 +1,11 @@
 
-    <section class="my-lg-5" id="portfolio-work">
+    <section class="my-lg-5 bg-pattern-dark border-bottom" id="portfolio-work">
       <div class="container">
         <div class="text-center">
-          <h2 class="display-4">Our work</h2>
-          <p class="lead text-muted mt-2">Learn more about our projects.</p>
+          <h2 class="display-4 text-light">Our work</h2>
+          <p class="lead text-muted text-light mt-2">Learn more about our projects.</p>
         </div>
-                <div class="row">
+                <div class="row justify-content-md-center">
                   <div class="col-md-12">
                     <div class="block">
                       <div class="portfolio-content">
