--- a/layouts/partials/scan.html
+++ b/layouts/partials/scan.html
@@ -1,5 +1,5 @@
 
-    <div class="bg-warning">
+    <div class="bg-warning position-relative">
       <div class="container">
         <div class="row py-2">
         <div class="col-lg-10">
