--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -1,55 +1,23 @@
-<section class="my-lg-2">
-  <div class="container">
+<section class="py-lg-5 diagonal-box bg-white">
+  <div class="container content">
       <div class="integrations">
         <div class="row">
+          {{ $services := .Site.Data.services.content }}
+          {{ range $services }}
+          {{ with . }}
+
           <div class="col-lg-4">
             <div class="box text-center">
-              <div class="icon d-flex align-items-end"><img src="/img/icons/developer.svg" alt="..." class="img-fluid"></div>
-              <h3 class="h4">Consulting</h3>
-              <p class="font-weight-light">Whether it's a long term project or a short-term engagement, developing serverless applications or building a cloud platform: we can help.</p>
+              <div class="icon d-flex align-items-end"><img src="/img/icons/{{ .icon }}" alt="..." class="img-fluid"></div>
+              <h3 class="h4"><a href="{{ .url }}">{{ .name }}</h3></a>
+              <p class="font-weight-light">{{ .text }}</p>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="box text-center">
-              <div class="icon d-flex align-items-end"><img src="/img/icons/brainstorming.svg" alt="..." class="img-fluid"></div>
-              <h3 class="h4"><a href="/workshops">Workshops</a></h3>
-              <p class="font-weight-light">We facilitate workshops on cloud engineering, serverless development or containerization. Suitable for managers as well as engineers.</p>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="box text-center">
-              <div class="icon d-flex align-items-end"><img src="/img/icons/training.svg" alt="..." class="img-fluid"></div>
-              <h3 class="h4">Training</h3>
-              <p class="font-weight-light">Let us train your engineers and make them cloud ready. We have experience in creating and giving training.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-              <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="/img/icons/profit.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4"><a href="/scan">Cloud cost savings</a></h3>
-                <p class="font-weight-light">Cloud can be costly if it's not implemented correctly. We can give you insights and discover possibilities for cost saving.</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="/img/icons/startup.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Kickstart for Startups</h3>
-                <p class="font-weight-light">Succesful startups become scale-ups. But this requires huge investments in setting up cloud resources, CI/CD and monitoring and logging. We can do it in weeks and make sure you can manage it yourself.</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="/img/icons/tax.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Audit & second opinion</h3>
-                <p class="font-weight-light">Not sure you're making the right choices? Let us give you a second opinion. We promise it will be useful.</p>
-              </div>
-            </div>
-          </div>
+          {{ end }}
+          {{ end }}
         </div>
       </div>
     </div>
   </section>
-  {{ partial "get-started.html" . }}
   {{ partial "technologies.html" . }}
+  {{ partial "get-started.html" . }}
