--- a/layouts/workshop/list.html
+++ b/layouts/workshop/list.html
@@ -10,17 +10,17 @@
 	<!-- Hero Section-->
 	<section class="hero bg-hero">
 		<div class="container text-center">
-			<h1>{{ .Page.Title }}</h1>
+			<h1 class="text-white">{{ .Page.Title }}</h1>
 			<div class="row">
 			<div class="col-lg-8 mx-auto">
-				<p class="lead text-muted">{{ .Page.Description }}</p>
+				<p class="lead text-white">{{ .Page.Description }}</p>
 			</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="blog">
-		<div class="container">
+	<section class="blog diagonal-box bg-white">
+		<div class="container content pt-5">
 			<div class="row">
 				<div class="col-lg-10 mx-auto">
 					<div class="card-deck">
