--- a/layouts/workshop/single.html
+++ b/layouts/workshop/single.html
@@ -9,10 +9,10 @@
     <!-- Hero Section-->
     <section class="hero bg-hero">
       <div class="container text-center">
-        <h1>{{ .Page.Title }}</h1>
+        <h1 class="text-white">{{ .Page.Title }}</h1>
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <p class="lead text-muted">{{ .Page.Description }}</p>
+            <p class="lead text-white">{{ .Page.Description }}</p>
           </div>
         </div>
       </div>
