--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,7 +20,7 @@
   {{ $main := resources.Get "js/main.js" }}
   {{ $plugins := resources.Get "js/plugins.js" }}
   {{ $jquery := resources.Get "js/jquery.js" }}
-  {{ $bootstrap := resources.Get "js/bootstrap.js" }}
+  {{ $bootstrap := resources.Get "js/bootstrap.bundle.js" }}
   {{ $lightbox := resources.Get "js/lightbox.js" }}
   {{ $owlcarousel := resources.Get "js/owl.carousel.js" }}
   {{ $defaultJS := slice $jquery $bootstrap $lightbox $plugins | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
