--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1217,6 +1217,7 @@ ul#portfolio-content-active {
   -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   margin-bottom: 6px;
+  border-radius: 15px;
 }
 
 
