--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -26,3 +26,7 @@ window.cookieconsent.initialise({
 
   gtag('config', 'UA-154801189-1');
 </script>
+
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8544345.js"></script>
+<!-- End of HubSpot Embed Code -->
