--- a/layouts/partials/home-clients.html
+++ b/layouts/partials/home-clients.html
@@ -1,5 +1,5 @@
     <section class="bg-white diagonal-box">
-        <div class="text-center">
+        <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto content">
               <p class="text-muted font-weight-lighter mt-4 mb-2">Companies we work with:</p>
