--- a/layouts/partials/schema.html
+++ b/layouts/partials/schema.html
@@ -53,7 +53,7 @@
           "@type": "Person",
           "name": "{ .Site.Params.author }}"
         },
-      "description": "{ .Site.Params.description }}",
+      "description": "{ .Site.Params.description }}"
     }
     {{ end }}
     </script>
