--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,4 @@
+<header class="header">
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <a href="/" class="navbar-brand"><img src="/img/logo/logo_text_right.svg" alt="" class="img-fluid"></a>
@@ -16,7 +17,8 @@
                 </li>
                 {{ end }}
       </ul>
-      <a href="/contact" class="btn btn-primary navbar-btn ml-0 ml-lg-3 rounded-pill">Contact</a>
+      <a href="/contact" class="btn btn-outline-primary navbar-btn ml-0 ml-lg-3 rounded-pill text-uppercase">Contact</a>
     </div>
   </div>
 </nav>
+</header>
