Fixed structured data and sizing

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -2,7 +2,8 @@
 <section id="instagram" class="diagonal-box bg-white">
   <div class="container content mb-5">
     <div class="text-center">
-      <h2 class="display-5">It's not all about work...</h2>
+      <h2 class="display-5">Our core values</h2>
+      <p class="lead">At Skyworkz we are people oriented. This means a healthy work/life balance, but also being empathic and not judgmental. We are curious, innovative and we have a good sense of humour. And, most of all: we are techies.</p>
     </div>
     <div class="row">
       <div class="col-md-12">
@@ -15,11 +16,10 @@
 
 <!-- Team Start -->
 <section id="portfolio-work" class="bg-muted">
-  <div class="container">
-    <div class="row justify-content-md-center">
+  <div class="container mb-5">
     <div class="text-center">
-      <h2 class="display-5">Meet the team.</h2>
-    </div>
+      <h2 class="display-5">Meet the people.</h2>
+      <p class="lead">Everyone is unique. But at Skyworkz we share the same passion that connect us together: technology. We are a diverse group of skilled professionals, who like to work together and learn from eachother. We want to make a lasting impact.</p>
     </div>
     <div class="row justify-content-md-center">
       <div class="col-md-12">
