--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1237,6 +1237,12 @@ ul#portfolio-content-active {
   display: flex;
 }
 
+@media (max-width: 991.98px) {  
+  .overlay {
+    display: none;
+  }
+}
+
 #instagram .block .instagram-content ul li a {
   display: block;
   color: #fff;
@@ -1279,6 +1285,7 @@ ul#portfolio-content-active {
   justify-content: center;
   display: flex;
   padding: 30px;
+  border-radius: 15px;
 }
 
 #instagram .block .instagram-content .position-center {
