--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 					<div class="col-md-10">
-					<h1 class="text-white">{{ .Page.Title }}</h1>
+					<h2 class="text-white mt-4">{{ .Page.Title }}</h1>
 					<div class="post-info-wrapper">
 					<p class="font-italic text-white">by {{ .Params.author }} on {{ .Site.Params.dateFormat | default "Jan 2, 2006" | .Date.Format }}</p>
 					</div>
