--- a/layouts/partials/home-about.html
+++ b/layouts/partials/home-about.html
@@ -19,7 +19,7 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-lg-12">
-                <p class="lead divider-subtitle mt-2 mb-3 text-muted">Next to <a href="consulting">cloud consulting</a> and our <a href="">cloud jumpstart</a>, we help companies <a href="/costs">save costs</a>, we organize various <a href="workshops">workshops</a> and we provide <a href="training">cloud training</a>.</p>
+                <p class="lead divider-subtitle mt-2 mb-3 text-muted">Next to <a href="/services/consultancy">cloud consulting</a> and our <a href="/services/kickstart">cloud kickstart</a>, we help companies <a href="/services/scan">save costs</a>, we organize various <a href="/workshops">workshops</a> and we provide <a href="/services/training">cloud training</a>.</p>
               </div>
             </div>
             <a href="/team" class="btn btn-primary rounded-pill">Get to know us</a>
