--- a/layouts/partials/home-services.html
+++ b/layouts/partials/home-services.html
@@ -1,10 +1,10 @@
-<section class="my-lg-5">
+<section class="py-lg-5">
     <div class="container">
         <div class="text-center">
           <h2 class="display-4">Services</h2>
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <p class="lead text-muted mt-2">We like to solve hard problems. Can you challenge us?</p>
+              <p class="lead text-muted mt-2 text-light">We like to solve hard problems. Can you challenge us?</p>
             </div>
           </div>
         </div>
@@ -12,28 +12,34 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="/img/icons/developer.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud consultancy</h3>
-                <p class="font-weight-light">Get one of our experts to help your organisation.</p>
+                <div class="icon d-flex align-items-end"><img src="/img/icons/startup.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Cloud Kickstart</h3>
+                <p class="font-weight-light">A full cloud platform up and running in days, including CI/CD, monitoring and support.</p>
+                <a class="" href="/services/kickstart">Cloud Kickstart »</a>
               </div>
-            </div>
+           </div>  
+ 
             <div class="col-lg-4">
               <div class="box text-center">
-                <div class="icon d-flex align-items-end"><img src="/img/icons/brainstorming.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud jumpstart</h3>
-                <p class="font-weight-light">Kickstart your Cloud journey with one of our productized services.</p>
+                <div class="icon d-flex align-items-end"><img src="/img/icons/developer.svg" alt="..." class="img-fluid"></div>
+                <h3 class="h4">Cloud Consultancy</h3>
+                <p class="font-weight-light">Long term or short term engagements: our consultants can help you with cloud related projects.</p>
+                <a class="" href="/services/consultancy">Hire a consultant »</a>
               </div>
-            </div>  
+            </div>
+
+            
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/icons/training.svg" alt="..." class="img-fluid"></div>
                 <h3 class="h4">Workshops and training</h3>
                 <p class="font-weight-light">Become a Cloud expert, Kubernetes wizard or a DevOps guru.</p>
+                <a class="" href="/workshops">Explore our training offerings »</a>
               </div>
             </div>
           </div>
           <div class="text-center">
-            <a class="btn btn-outline-primary" href="/services">Read more about our services</a>
+            <a class="btn btn-primary rounded-pill" href="/services">Read more about our services</a>
           </div>
         </div>
       </div>
