--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,14 +3,13 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="body body--home">
+  <body class="body">
     {{ partial "header.html" . }}
-    {{ partial "hero.html" . }}
-    {{ partial "clients.html" . }}
-    {{ partial "scan.html" . }}
-    {{ partial "meet-the-team.html" . }}
+    {{ partial "home-hero.html" . }}
+    {{ partial "home-clients.html" . }}
+    {{ partial "home-about.html" . }}
     {{ partial "home-services.html" . }}
-    {{ partial "portfolio.html" . }}
+    {{ partial "home-portfolio.html" . }}
     {{ partial "get-started.html" . }}
     {{ partial "footer.html" . }}
     {{ partial "scripts.html" . }}
