--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,5 +1,3 @@
-<script src="/vendor/jquery/jquery.min.js"></script>
-<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
 <script src="/vendor/lightbox2/js/lightbox.js"></script>
 <script src="/js/front.js"></script>
@@ -26,3 +24,7 @@ window.cookieconsent.initialise({
 
   gtag('config', 'UA-154801189-1');
 </script>
+
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8544345.js"></script>
+<!-- End of HubSpot Embed Code -->
