--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -16,7 +16,8 @@ window.cookieconsent.initialise({
 });
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154801189-1"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154801189-1"></script> 
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -24,7 +25,4 @@ window.cookieconsent.initialise({
 
   gtag('config', 'UA-154801189-1');
 </script>
-
-<!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8544345.js"></script>
-<!-- End of HubSpot Embed Code -->
+-->
