--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,8 +21,7 @@
   {{ $plugins := resources.Get "js/plugins.js" }}
   {{ $jquery := resources.Get "js/jquery.js" }}
   {{ $bootstrap := resources.Get "js/bootstrap.bundle.js" }}
-  {{ $lightbox := resources.Get "js/lightbox.js" }}
-  {{ $defaultJS := slice $jquery $bootstrap $lightbox $plugins | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
+  {{ $defaultJS := slice $jquery $bootstrap $plugins | resources.Concat "js/global.js" | resources.Minify | resources.Fingerprint }}
   <script src="{{ $defaultJS.Permalink }}"></script>
 
   {{ $owlcarousel := resources.Get "js/owl.carousel.js" }}
